--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,4 +1,7 @@
-include.path=${php.global.include.path}
+file.reference.NetBeansProjects-Zikula=../Zikula
+include.path=\
+    ${php.global.include.path}:\
+    ${file.reference.NetBeansProjects-Zikula}
 php.version=PHP_53
 source.encoding=UTF-8
 src.dir=.
